--- a/googlepage.html
+++ b/googlepage.html
@@ -24,7 +24,7 @@
 		<li>Voy a tener suerte</li>
 	</ul>
 </div>
-<div><p>Google.es offered in:<a href="#">español</a><a href="#">catalá</a><a href="#">galego</a><a href="#">euskara</a></p></div>
+<div id = "language"><p>Google.es offered in:<a href="#">español</a><a href="#">catalá</a><a href="#">galego</a><a href="#">euskara</a></p></div>
 </article>
 
 
