set footer color and navbar

--- a/googlepage.html
+++ b/googlepage.html
@@ -29,12 +29,12 @@
 
 
 <footer>
-	<ul>
+	<ul id= "left">
 		<li>advertising</li>
 		<li>business</li>
 		<li>about</li>
 	</ul>
-	<ul>
+	<ul id = "right">
 		<li>privacy</li>
 		<li>Terms</li>
 		<li>Setting</li>
