introduce all the links

--- a/googlepage.html
+++ b/googlepage.html
@@ -8,11 +8,11 @@
 <body>
 <nav>
 	<ul>
-		<li>gmail</li>
-		<li>imágenes</li>
+		<li><a href="#">gmail</a></li>
+		<li><a href="#">im&aacutegenes</a></li>
 		<li><img src="googlelogo.png"></li>
 		<li><img src="googlebell.png"></li>
-		<li>iniciar sesión</li>
+		<li><a href="#">iniciar sesi&oacuten</a></li>
 	</ul>
 </nav>
 <article>
@@ -20,25 +20,25 @@
 <div id = "search"><img src="googlemike.png"></div>
 <div id = "lucky">
 	<ul>
-		<li>Buscar con Google</li>
-		<li>Voy a tener suerte</li>
+		<li><a href ="#">Buscar con Google</a></li>
+		<li><a href = "#">Voy a tener suerte</a></li>
 	</ul>
 </div>
-<div id = "language"><p>Google.es offered in:<a href="#">español</a><a href="#">catalá</a><a href="#">galego</a><a href="#">euskara</a></p></div>
+<div id = "language"><p>Google.es offered in:<a href="#">espa&ntildeol</a><a href="#">catal&aacute</a><a href="#">galego</a><a href="#">euskara</a></p></div>
 </article>
 
 
 <footer>
 	<ul id= "left">
-		<li>advertising</li>
-		<li>business</li>
-		<li>about</li>
+		<li><a href="#">Advertising</a></li>
+		<li><a href="#">Business</a></li>
+		<li><a href="#">About</a></li>
 	</ul>
 	<ul id = "right">
-		<li>privacy</li>
-		<li>Terms</li>
-		<li>Setting</li>
-		<li>Use Google.com</li>
+		<li><a href="#">Privacy</a></li>
+		<li><a href="#"><a href="#">Terms</a></li>
+		<li><a href="#">Setting</a></li>
+		<li><a href="#">Use Google.com</a></li>
 	</ul>
 </footer>
 </body>
