set the iniciar button

--- a/googlepage.html
+++ b/googlepage.html
@@ -12,7 +12,7 @@
 		<li><a href="#">im&aacutegenes</a></li>
 		<li><img src="googlelogo.png"></li>
 		<li><img src="googlebell.png"></li>
-		<li><a href="#">iniciar sesi&oacuten</a></li>
+		<li id = "btn"><a href="#">iniciar sesi&oacuten</a></li>
 	</ul>
 </nav>
 <article>
