--- a/googlepage.html
+++ b/googlepage.html
@@ -8,8 +8,8 @@
 <body>
 <nav>
 	<ul>
-		<li><a href="#">gmail</a></li>
-		<li><a href="#">im&aacutegenes</a></li>
+		<li><a href="#">Gmail</a></li>
+		<li><a href="#">Im&aacutegenes</a></li>
 		<li><img src="googlelogo.png"></li>
 		<li><img src="googlebell.png"></li>
 		<li id = "btn"><a href="#">iniciar sesi&oacuten</a></li>
